<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 公共 -->
    <string name="app_name">盘点易</string>
    <string name="ver_name">中设正泰盘点易V1.0.4</string>
    <string name="progress_text_format">计划：&lt;font color=red>%1$d&lt;/font> 已盘：&lt;font color=red>%2$d&lt;/font> 盘盈：&lt;font color=red>%3$d&lt;/font> 盘亏：&lt;font color=red>%4$d&lt;/font></string>
    <string name="toast_network_no_respone">服务器未响应，请尝试重连，或检查网络网络状态</string>
    <string name="glb_message_page_tip">页</string>
 	<string name="no_record_message">抱歉，没有符合条件的记录！</string>
 	<string name="copyright">Copyright &#064;2014 广东中设正泰科技股份有限公司</string>
    <string name="text_progressing">处理中&#8230;&#8230;&#8230;</string>
    <string name="text_no_result">"没有任务&#8230;&#8230;&#8230;点击刷新按钮重新检查"</string>
    <string name="text_fresh">刷新</string>
    <string name="inventory_input_hint">搜索条件</string>
    <string name="btn_exit">退出</string>
    <string name="btn_save">保存</string>
    <string name="confirm">确定</string>
    <string name="dialog_nagetive">取消</string>
    <string name="dialog_positive">确认</string>
    <string name="text_include_texts" />
    <string name="dialog_btn_save">保存</string>
    <string name="dialog_btn_edit">修改</string>
    <string name="dialog_btn_print">打印</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_remove">撤销</string>
    <string name="dialog_warning">警告！</string>
    <string name="dialog_dsc">说明</string>
    <string name="dialog_ignore">忽略</string>    
    <string name="progress_text_network_checking">网络检测中，请稍等&#8230;&#8230;&#8230;</string>
    <string name="set_des2">密码：</string>
    <string name="set_des3">帐号：</string>
    <string name="dialog_print">打印标签</string>  
    <string name="choicer_all">请选择管理部门</string>
    <string name="choicer_no_res">无授权管理部门</string>
    <string name="no_record">没有相关记录</string>
    
    <!-- 服务器设置 -->
    <string name="server_address">服务器：</string>
    <string name="server_port">端口号：</string>
    <string name="server_app">应用名：</string>
    <string name="server_test">测试连接</string>
    
    <!-- 主界面 -->
    <string name="title_activity_login">盘点易</string>
    <string name="title_activity_main">主页</string>
    <string name="title_activity_preference">基础设置</string>
    <string name="title_activity_inventory">盘点任务</string>
    <string name="title_activity_download">下载任务</string>
    <string name="title_activity_upload">数据上传</string>
    <string name="title_activity_shortage">盘亏处理</string>
    <string name="title_activity_surplus">盘盈处理</string>
    <string name="title_activity_print">条码打印</string>
    <string name="title_activity_rfid">标签绑定</string>
    <string name="title_activity_search">盘点查询</string>
    <string name="title_activity_about">关于正泰</string>
    <string name="title_activity_help">使用说明</string>
    
	<!-- 登录 -->
	<string name="user_id">帐号</string>
    <string name="user_id_hint">请输入用户帐号</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入用户密码</string>
    <string name="btn_login">登陆</string>
    <string name="btn_register">注册</string>
    <string name="sys_setting">设置</string>
	<string name="remember_password">记住密码</string>
	
	<!-- 盘点任务 -->
    <string name="operate_shortage">盘亏</string>
    <string name="title_check">盘点处理</string>
    <string name="btn_start_inventory">开始盘点</string>
    
    <!-- 标签绑定 -->
	<string name="dialog_rfid_operate">标签绑定</string>
	<string name="marks">标签编码：</string>
    <string name="marks_hint">请输入标签编码</string>
    <string name="marks_tips">请绑定标签编码</string>
    
    <!-- 盘盈处理 -->
    <string name="dialog_add_surplus">盘盈添加</string>  
    <string name="dialog_surplus_operate">盘盈处理</string>
    <string name="means_code">资产编号：</string>
    <string name="means_code_hint">请输入资产编号</string>
    <string name="device_code">设备编号：</string>
    <string name="device_code_hint">请输入设备编号</string>
    <string name="device_name">设备名称：</string>
    <string name="device_name_hint">请输入设备名称</string>
    <string name="xinghao">设备型号：</string>
    <string name="xinghao_hint">请输入设备型号</string>
    <string name="guige">设备规格：</string>
    <string name="guige_hint">请输入设备规格</string>
    <string name="chuchang_code">出厂编号：</string>
    <string name="chuchang_code_hint">请输入出厂编号</string>
    <string name="factory">&#160;&#160;&#160;&#160;制造厂：</string>
    <string name="factory_hint">请输入制造厂</string>
    <string name="chuchang_date">出厂年月：</string>
    <string name="chuchang_date_hint">请输入出厂年月</string>
    <string name="build_address">安装地点：</string>
    <string name="build_address_hint">请输入安装地点</string>
    <string name="remarks">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;备注：</string>
    <string name="remarks_hint">请输入备注</string>
    <string name="title_surplus_add">盘盈新增</string>
    <string name="title_surplus_info">盘盈信息</string>
    
    <!-- 盘亏处理 -->
    <string name="dialog_short_operate">盘亏处理</string>
    <string name="dialog_data_short">设备盘亏</string>
    
    <!-- 下载任务 -->
    <string name="pause_download">暂停下载</string>
    <string name="start_download">开始下载</string>
    <string name="stop_download">停止下载</string>
    <string name="download_complete">下载已完成！</string>
    <string name="download_error">下载失败，请检查您的网络状况！</string>
    <string name="dialog_hasplan_dsc">您还有未完成的盘点计划，重新下载会覆盖掉您当前的盘点任务，是否继续？</string>
    <string name="dialog_hasuser_dsc">您已有存在的用户信息，重新下载将会覆盖您当前的用户信息，是否继续？</string>
    <string name="dialog_stopdownload_dsc">您的操作将会终止本次下载并清除这次下载的内容！是否继续？</string>
    <string name="toast_no_task_sel">没有选择任务，请选择需要下载的任务再次点击下载</string>
    <string name="server_not_set">服务器未配置或地址错误，下载功能不可用请重新设置！</string>
    <string name="toast_no_depart_sel">您未选择需要下载的盘点部门，请先选取</string>
    <string name="dialog_leave_des">是否终止下载，并离开该页面&#8230;&#8230;&#8230;</string>
    
    <!-- 上传结果 -->
    <string name="start_upload">开始上传</string>    
    <string name="upload_sucess">上传成功！</string>
    <string name="upload_faild">上传失败，请检查你的网络状况！</string>
    <string name="toast_no_up_task">未选择需要上传的数据，请先选择</string>
    
    <!-- 查询 -->
    <string name="dialog_check">设备盘查</string>
    <string name="dialog_overview">数据查看</string>
    <string name="title_pankui">设备信息</string>
    <string name="is_right">是否相符：</string>
    
    <!-- 设置 -->
    <string name="menu_settings">设置</string>
    <string name="ipaddress"><u>服务器设置</u></string>
    <string name="menu_settings_about">关于</string>
	<string name="defaule_user_id">设置默认用户帐号</string>
    <string name="pref_default_user_id">默认用户帐号</string>
    <string name="des_pref_default_user_id">为设备设置一个默认用户帐号</string>
    <string name="des_server_address">为设备设置服务器地址（如果为空则无法使用该应用）</string>
    <string name="pref_server_address">服务器地址</string>    
    <string name="toast_save_success">设置保存成功</string>
    <string name="btn_reconnect">重连服务器</string>    
    <string name="set_des1">服务器地址：</string>	
 	
 	<!-- 注册页面 -->
 	<string name="register_btn"><u>获取验证码</u></string>
 	<string name="register_name">商户名称：</string>
	<string name="register_name_hint">请输入商户名称</string>
	<string name="register_email">电子邮箱：</string>
	<string name="register_email_hint">请输入电子邮箱</string>
	<string name="register_trade">所属行业：</string>
	<string name="register_trade_hint">请选择所属行业</string>
 	<string name="register_mobile">手机号码：</string>
 	<string name="register_mobile_hint">请输入手机号码</string>
 	<string name="register_pwd">登录密码：</string>
 	<string name="register_pwd_hint">请输入登录密码</string>
 	<string name="register_code">&#160;&#160;&#160;&#160;验证码：</string>
 	<string name="register_code_hint">请输入验证码</string> 	
</resources>